# singbox-rules

./: LICENSE  README.md  pyproject.toml
src/: main.py
template/: config.json
tests/: test_function.py
